# data-structure-synthesis

./: .gitignore
Qt/: CMakeLists.txt  Circles.h  Game.h  MainWindow.h  MyCircle.h  main.cpp  random.h
